src/test/deca/syntax/parser/invalid/decl_var_expr_ident_reserved_words_readfloat.deca
// Parser test, identifier unavailable, reserved word

{
    int readFloat = 5;
}